--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,8 @@
   "singleQuote": false,
   "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
