--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "validate-all": "npm run lint && npm run type-check && npm run format:check && npm run build"
   },
   "dependencies": {
+    "@auth/core": "^0.37.0",
+    "@convex-dev/auth": "^0.0.90",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
