--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,css,json}\"",
     "type-check": "tsc --noEmit",
-    "validate-all": "npm run lint && npm run type-check && npm run format:check && npm run build"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "validate-all": "npm run lint && npm run type-check && npm run format:check && npm run test:run && npm run build"
   },
   "dependencies": {
     "@auth/core": "^0.37.0",
@@ -36,14 +40,18 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/ui": "^4.0.6",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
+    "convex-test": "^0.0.38",
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
+    "fast-glob": "^3.3.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.6"
   }
 }
