--- a/.github/workflows/convex-validation.yml
+++ b/.github/workflows/convex-validation.yml
@@ -1,4 +1,4 @@
-name: Convex Deployment
+name: Convex Validation
 
 on:
   push:
@@ -37,27 +37,4 @@ jobs:
             echo "⚠️ Warning: No schema.ts found in convex/"
           fi
 
-  deploy-convex:
-    name: Deploy to Convex
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    needs: validate-convex
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Deploy to Convex
-        run: npx convex deploy --cmd 'npm run build'
-        env:
-          CONVEX_DEPLOY_KEY: ${{ secrets.CONVEX_DEPLOY_KEY }}
 
