--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,21 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
     "prettier-plugin-tailwindcss"
-  ]
+  ],
+  "importOrder": [
+    "^react$",
+    "^react-dom$",
+    "^next",
+    "<THIRD_PARTY_MODULES>",
+    "^@/components/(.*)$",
+    "^@/features/(.*)$",
+    "^@/lib/(.*)$",
+    "^@/utils/(.*)$",
+    "^@/(.*)$",
+    "^[./]",
+    "<TYPES>"
+  ],
+  "importOrderSortSpecifiers": true
 }
