--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.28.0",
+    "convex": "^1.29.0",
     "jotai": "^2.15.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
@@ -37,6 +37,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.6",
     "resend": "^6.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
