--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
+    "react-use": "^17.6.0",
     "resend": "^6.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
