--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.29.0",
+    "date-fns": "^4.1.0",
     "jotai": "^2.15.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
