--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.1.1",
     "convex": "^1.29.0",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.16.1",
     "jotai": "^2.15.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
