--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "emoji-picker-react": "^4.16.1",
     "jotai": "^2.15.1",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
     "quill": "^2.0.3",
