--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "convex": "^1.31.2",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.16.1",
+    "input-otp": "^1.4.2",
     "jotai": "^2.15.1",
     "lucide-react": "^0.546.0",
     "next": "^15.5.9",
