--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "convex": "^1.31.7",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.16.1",
+    "framer-motion": "^12.34.0",
     "input-otp": "^1.4.2",
     "jotai": "^2.15.1",
     "lucide-react": "^0.546.0",
