--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
     "quill": "^2.0.3",
+    "radix-ui": "^1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
